// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-accordion renders default html 1`] = `
<c-accordion>
  <mock:shadow-root>
    <div class="c-accordion">
      <slot></slot>
    </div>
  </mock:shadow-root>
  <c-accordion-item heading="One" value="one">
    <mock:shadow-root>
      <div class="c-accordion-item">
        <button aria-controls="panel__3" aria-expanded="false" aria-label="One" class="c-accordion-item__header" id="header__3" tabindex="0">
          <div class="c-accordion-item__icon">
            <slot name="icon"></slot>
          </div>
          <div class="c-accordion-item__title">
            One
          </div>
          <div class="c-accordion-item__indicator">
            <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
              <path d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z" fill="var(--csc-primary)"></path>
            </svg>
          </div>
        </button>
        <div class="c-accordion-item__content-wrapper">
          <div aria-labelledby="header__3" class="c-accordion-item__content" id="panel__3" role="region"></div>
        </div>
      </div>
    </mock:shadow-root>
    <i class="mdi mdi-access-point" slot="icon"></i>
    Lorem ipsum dolor sit amet.
  </c-accordion-item>
  <c-accordion-item heading="Two" value="two">
    <mock:shadow-root>
      <div class="c-accordion-item">
        <button aria-controls="panel__3" aria-expanded="false" aria-label="Two" class="c-accordion-item__header" id="header__3" tabindex="0">
          <div class="c-accordion-item__icon">
            <slot name="icon"></slot>
          </div>
          <div class="c-accordion-item__title">
            Two
          </div>
          <div class="c-accordion-item__indicator">
            <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
              <path d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z" fill="var(--csc-primary)"></path>
            </svg>
          </div>
        </button>
        <div class="c-accordion-item__content-wrapper">
          <div aria-labelledby="header__3" class="c-accordion-item__content" id="panel__3" role="region"></div>
        </div>
      </div>
    </mock:shadow-root>
    <i class="mdi mdi-nas" slot="icon"></i>
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, perspiciatis?
  </c-accordion-item>
  <c-accordion-item heading="Three" value="three">
    <mock:shadow-root>
      <div class="c-accordion-item">
        <button aria-controls="panel__3" aria-expanded="false" aria-label="Three" class="c-accordion-item__header" id="header__3" tabindex="0">
          <div class="c-accordion-item__icon">
            <slot name="icon"></slot>
          </div>
          <div class="c-accordion-item__title">
            Three
          </div>
          <div class="c-accordion-item__indicator">
            <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
              <path d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z" fill="var(--csc-primary)"></path>
            </svg>
          </div>
        </button>
        <div class="c-accordion-item__content-wrapper">
          <div aria-labelledby="header__3" class="c-accordion-item__content" id="panel__3" role="region"></div>
        </div>
      </div>
    </mock:shadow-root>
    <i class="mdi mdi-camera" slot="icon"></i>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia voluptatum perspiciatis itaque!
  </c-accordion-item>
</c-accordion>
`;

exports[`c-accordion renders expanded accordion-item 1`] = `
<c-accordion value="one">
  <mock:shadow-root>
    <div class="c-accordion">
      <slot></slot>
    </div>
  </mock:shadow-root>
  <c-accordion-item heading="One" value="one">
    <mock:shadow-root>
      <div class="c-accordion-item c-accordion-item--expanded">
        <button aria-controls="panel__6" aria-expanded="true" aria-label="One" class="c-accordion-item__header c-accordion-item__header--expanded" id="header__6" tabindex="0">
          <div class="c-accordion-item__icon">
            <slot name="icon"></slot>
          </div>
          <div class="c-accordion-item__title">
            One
          </div>
          <div class="c-accordion-item__indicator c-accordion-item__indicator--expanded">
            <svg class="expanded" fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
              <path d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z" fill="var(--csc-primary)"></path>
            </svg>
          </div>
        </button>
        <div class="c-accordion-item__content-wrapper">
          <div aria-labelledby="header__6" class="c-accordion-item__content" id="panel__6" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </mock:shadow-root>
    <i class="mdi mdi-access-point" slot="icon"></i>
    Lorem ipsum dolor sit amet.
  </c-accordion-item>
  <c-accordion-item heading="Two" value="two">
    <mock:shadow-root>
      <div class="c-accordion-item">
        <button aria-controls="panel__6" aria-expanded="false" aria-label="Two" class="c-accordion-item__header" id="header__6" tabindex="0">
          <div class="c-accordion-item__icon">
            <slot name="icon"></slot>
          </div>
          <div class="c-accordion-item__title">
            Two
          </div>
          <div class="c-accordion-item__indicator">
            <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
              <path d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z" fill="var(--csc-primary)"></path>
            </svg>
          </div>
        </button>
        <div class="c-accordion-item__content-wrapper">
          <div aria-labelledby="header__6" class="c-accordion-item__content" id="panel__6" role="region"></div>
        </div>
      </div>
    </mock:shadow-root>
    <i class="mdi mdi-nas" slot="icon"></i>
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, perspiciatis?
  </c-accordion-item>
  <c-accordion-item heading="Three" value="three">
    <mock:shadow-root>
      <div class="c-accordion-item">
        <button aria-controls="panel__6" aria-expanded="false" aria-label="Three" class="c-accordion-item__header" id="header__6" tabindex="0">
          <div class="c-accordion-item__icon">
            <slot name="icon"></slot>
          </div>
          <div class="c-accordion-item__title">
            Three
          </div>
          <div class="c-accordion-item__indicator">
            <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
              <path d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z" fill="var(--csc-primary)"></path>
            </svg>
          </div>
        </button>
        <div class="c-accordion-item__content-wrapper">
          <div aria-labelledby="header__6" class="c-accordion-item__content" id="panel__6" role="region"></div>
        </div>
      </div>
    </mock:shadow-root>
    <i class="mdi mdi-camera" slot="icon"></i>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia voluptatum perspiciatis itaque!
  </c-accordion-item>
</c-accordion>
`;

exports[`c-accordion renders outlined items 1`] = `
<c-accordion outlined="" value="one">
  <mock:shadow-root>
    <div class="c-accordion">
      <slot></slot>
    </div>
  </mock:shadow-root>
  <c-accordion-item heading="One" value="one">
    <mock:shadow-root>
      <div class="c-accordion-item c-accordion-item--expanded c-accordion-item--outlined">
        <button aria-controls="panel__9" aria-expanded="true" aria-label="One" class="c-accordion-item__header c-accordion-item__header--expanded" id="header__9" tabindex="0">
          <div class="c-accordion-item__icon">
            <slot name="icon"></slot>
          </div>
          <div class="c-accordion-item__title">
            One
          </div>
          <div class="c-accordion-item__indicator c-accordion-item__indicator--expanded">
            <svg class="expanded" fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
              <path d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z" fill="var(--csc-primary)"></path>
            </svg>
          </div>
        </button>
        <div class="c-accordion-item__content-wrapper">
          <div aria-labelledby="header__9" class="c-accordion-item__content" id="panel__9" role="region">
            <slot></slot>
          </div>
        </div>
      </div>
    </mock:shadow-root>
    <i class="mdi mdi-access-point" slot="icon"></i>
    Lorem ipsum dolor sit amet.
  </c-accordion-item>
  <c-accordion-item expanded="" heading="Two" value="two">
    <mock:shadow-root>
      <div class="c-accordion-item c-accordion-item--outlined">
        <button aria-controls="panel__9" aria-expanded="false" aria-label="Two" class="c-accordion-item__header" id="header__9" tabindex="0">
          <div class="c-accordion-item__icon">
            <slot name="icon"></slot>
          </div>
          <div class="c-accordion-item__title">
            Two
          </div>
          <div class="c-accordion-item__indicator">
            <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
              <path d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z" fill="var(--csc-primary)"></path>
            </svg>
          </div>
        </button>
        <div class="c-accordion-item__content-wrapper">
          <div aria-labelledby="header__9" class="c-accordion-item__content" id="panel__9" role="region"></div>
        </div>
      </div>
    </mock:shadow-root>
    <i class="mdi mdi-nas" slot="icon"></i>
    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, perspiciatis?
  </c-accordion-item>
  <c-accordion-item heading="Three" value="three">
    <mock:shadow-root>
      <div class="c-accordion-item c-accordion-item--outlined">
        <button aria-controls="panel__9" aria-expanded="false" aria-label="Three" class="c-accordion-item__header" id="header__9" tabindex="0">
          <div class="c-accordion-item__icon">
            <slot name="icon"></slot>
          </div>
          <div class="c-accordion-item__title">
            Three
          </div>
          <div class="c-accordion-item__indicator">
            <svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
              <path d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z" fill="var(--csc-primary)"></path>
            </svg>
          </div>
        </button>
        <div class="c-accordion-item__content-wrapper">
          <div aria-labelledby="header__9" class="c-accordion-item__content" id="panel__9" role="region"></div>
        </div>
      </div>
    </mock:shadow-root>
    <i class="mdi mdi-camera" slot="icon"></i>
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia voluptatum perspiciatis itaque!
  </c-accordion-item>
</c-accordion>
`;
